--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": true,
+    "noEmitOnError": true,
+    "noImplicitOverride": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "jsx": "preserve",
     "plugins": [
       {
